refactor sass and add mobile response menu

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
-    <link href="./css/style.css" rel="stylesheet">
+    <link href="./css/main.css" rel="stylesheet">
     <title> Kevin Moore </title>
   </head>
 
@@ -67,15 +67,6 @@
               I make websites.
             </p>
           </div>
-          <div class="pixel-seperator">
-            <div class="about-pixel pixel p3"></div>
-            <div class="about-pixel pixel p2"></div>
-            <div class="about-pixel pixel p1"></div>
-            <div class="about-pixel pixel p0"></div>
-            <div class="about-pixel pixel p1"></div>
-            <div class="about-pixel pixel p2"></div>
-            <div class="about-pixel pixel p3"></div>
-          </div>
         </section>
         <section class="body-section" id="blog">
           <div class = "content-container">
@@ -85,15 +76,7 @@
               </h2>
             </div>
           </div>
-          <div class="pixel-seperator">
-            <div class="blog-pixel pixel p3"></div>
-            <div class="blog-pixel pixel p2"></div>
-            <div class="blog-pixel pixel p1"></div>
-            <div class="blog-pixel pixel p0"></div>
-            <div class="blog-pixel pixel p1"></div>
-            <div class="blog-pixel pixel p2"></div>
-            <div class="blog-pixel pixel p3"></div>
-          </div></section>
+        </section>
         <section class="body-section" id="contact">
           <div class = "content-container">
             <div class ="section-title">
