change social to online and added box shadows

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
           <div class = "content-container">
             <div class ="section-title">
               <h2>
-                I am social.
+                I am online.
               </h2>
             </div>
             <div class="social-links">
